ch01/03-calculator/03-with-bnf-rules/input.y
%{
#  include <stdio.h>
%}

/* declare tokens */
%token NUMBER
%token ADD SUB MUL DIV 
%token OPEN_PAREN CLOSE_PAREN
%token OPEN_ABS CLOSE_ABS
%token EOL

%%

calclist: /* nothing */
 | calclist exp EOL { printf("= %d\n> ", $2); }
 | calclist EOL { printf("> "); } /* blank line or a comment */
 ;

exp: factor
 | exp ADD exp { $$ = $1 + $3; }
 | exp SUB factor { $$ = $1 - $3; }
 ;

factor: term
 | factor MUL term { $$ = $1 * $3; }
 | factor DIV term { $$ = $1 / $3; }
 ;

term: NUMBER
 | OPEN_ABS term CLOSE_ABS { $$ = $2 >= 0? $2 : - $2; }
 | OPEN_PAREN exp CLOSE_PAREN { $$ = $2; }
 ;
%%


main()
{
  printf("> "); 
  yyparse();
}

yyerror(char *s)
{
  fprintf(stderr, "error: %s\n", s);
}
