ch01/03-calculator/03-with-bnf-rules/input.output
State 21 conflicts: 2 shift/reduce


Grammar

    0 $accept: calclist $end

    1 calclist: %empty
    2         | calclist exp EOL
    3         | calclist EOL

    4 exp: factor
    5    | exp ADD exp
    6    | exp SUB factor

    7 factor: term
    8       | factor MUL term
    9       | factor DIV term
   10       | factor BITWISE_AND term
   11       | factor BITWISE_OR term

   12 term: NUMBER
   13     | OPEN_ABS term CLOSE_ABS
   14     | OPEN_PAREN exp CLOSE_PAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 12
ADD (259) 5
SUB (260) 6
MUL (261) 8
DIV (262) 9
BITWISE_AND (263) 10
BITWISE_OR (264) 11
OPEN_PAREN (265) 14
CLOSE_PAREN (266) 14
OPEN_ABS (267) 13
CLOSE_ABS (268) 13
EOL (269) 2 3


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
calclist (16)
    on left: 1 2 3, on right: 0 2 3
exp (17)
    on left: 4 5 6, on right: 2 5 6 14
factor (18)
    on left: 7 8 9 10 11, on right: 4 6 8 9 10 11
term (19)
    on left: 12 13 14, on right: 7 8 9 10 11 13


State 0

    0 $accept: . calclist $end

    $default  reduce using rule 1 (calclist)

    calclist  go to state 1


State 1

    0 $accept: calclist . $end
    2 calclist: calclist . exp EOL
    3         | calclist . EOL

    $end        shift, and go to state 2
    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5
    EOL         shift, and go to state 6

    exp     go to state 7
    factor  go to state 8
    term    go to state 9


State 2

    0 $accept: calclist $end .

    $default  accept


State 3

   12 term: NUMBER .

    $default  reduce using rule 12 (term)


State 4

   14 term: OPEN_PAREN . exp CLOSE_PAREN

    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5

    exp     go to state 10
    factor  go to state 8
    term    go to state 9


State 5

   13 term: OPEN_ABS . term CLOSE_ABS

    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5

    term  go to state 11


State 6

    3 calclist: calclist EOL .

    $default  reduce using rule 3 (calclist)


State 7

    2 calclist: calclist exp . EOL
    5 exp: exp . ADD exp
    6    | exp . SUB factor

    ADD  shift, and go to state 12
    SUB  shift, and go to state 13
    EOL  shift, and go to state 14


State 8

    4 exp: factor .
    8 factor: factor . MUL term
    9       | factor . DIV term
   10       | factor . BITWISE_AND term
   11       | factor . BITWISE_OR term

    MUL          shift, and go to state 15
    DIV          shift, and go to state 16
    BITWISE_AND  shift, and go to state 17
    BITWISE_OR   shift, and go to state 18

    $default  reduce using rule 4 (exp)


State 9

    7 factor: term .

    $default  reduce using rule 7 (factor)


State 10

    5 exp: exp . ADD exp
    6    | exp . SUB factor
   14 term: OPEN_PAREN exp . CLOSE_PAREN

    ADD          shift, and go to state 12
    SUB          shift, and go to state 13
    CLOSE_PAREN  shift, and go to state 19


State 11

   13 term: OPEN_ABS term . CLOSE_ABS

    CLOSE_ABS  shift, and go to state 20


State 12

    5 exp: exp ADD . exp

    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5

    exp     go to state 21
    factor  go to state 8
    term    go to state 9


State 13

    6 exp: exp SUB . factor

    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5

    factor  go to state 22
    term    go to state 9


State 14

    2 calclist: calclist exp EOL .

    $default  reduce using rule 2 (calclist)


State 15

    8 factor: factor MUL . term

    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5

    term  go to state 23


State 16

    9 factor: factor DIV . term

    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5

    term  go to state 24


State 17

   10 factor: factor BITWISE_AND . term

    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5

    term  go to state 25


State 18

   11 factor: factor BITWISE_OR . term

    NUMBER      shift, and go to state 3
    OPEN_PAREN  shift, and go to state 4
    OPEN_ABS    shift, and go to state 5

    term  go to state 26


State 19

   14 term: OPEN_PAREN exp CLOSE_PAREN .

    $default  reduce using rule 14 (term)


State 20

   13 term: OPEN_ABS term CLOSE_ABS .

    $default  reduce using rule 13 (term)


State 21

    5 exp: exp . ADD exp
    5    | exp ADD exp .
    6    | exp . SUB factor

    ADD  shift, and go to state 12
    SUB  shift, and go to state 13

    ADD       [reduce using rule 5 (exp)]
    SUB       [reduce using rule 5 (exp)]
    $default  reduce using rule 5 (exp)


State 22

    6 exp: exp SUB factor .
    8 factor: factor . MUL term
    9       | factor . DIV term
   10       | factor . BITWISE_AND term
   11       | factor . BITWISE_OR term

    MUL          shift, and go to state 15
    DIV          shift, and go to state 16
    BITWISE_AND  shift, and go to state 17
    BITWISE_OR   shift, and go to state 18

    $default  reduce using rule 6 (exp)


State 23

    8 factor: factor MUL term .

    $default  reduce using rule 8 (factor)


State 24

    9 factor: factor DIV term .

    $default  reduce using rule 9 (factor)


State 25

   10 factor: factor BITWISE_AND term .

    $default  reduce using rule 10 (factor)


State 26

   11 factor: factor BITWISE_OR term .

    $default  reduce using rule 11 (factor)
